--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@web3auth/web3auth": "^2.1.3",
+    "framer-motion": "^7.6.1",
+    "magic-sdk": "^7.0.0",
     "moralis": "^2.6.7",
     "moralis-v1": "^1.11.0",
     "next": "12.3.1",
