--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metamask/logo": "^3.1.1",
     "@web3auth/web3auth": "^2.1.3",
     "framer-motion": "^7.6.1",
     "magic-sdk": "^7.0.0",
