--- a/constants/networkMapping.json
+++ b/constants/networkMapping.json
@@ -1,1 +1,1 @@
-{"80001":{"LiquidityVault":["0xDBF56205bCB2EC91c3f2806e979D17e6D1c0c247","0x41e190323923e37A190A6907aa4868cb0F613cF2"],"LiquidityWars":["0xF26AC22Da674c8Bc8B5E6276afF69823bcc35785"]}}
+{"80001":{"LiquidityVault":["0x41e190323923e37A190A6907aa4868cb0F613cF2"],"LiquidityWars":["0xF26AC22Da674c8Bc8B5E6276afF69823bcc35785"]}}
