--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@metamask/logo": "^3.1.1",
     "@web3auth/web3auth": "^2.1.3",
+    "ethers": "^5.7.2",
     "framer-motion": "^7.6.1",
     "magic-sdk": "^7.0.0",
     "moralis": "^2.6.7",
