--- a/constants/networkMapping.json
+++ b/constants/networkMapping.json
@@ -1,1 +1,1 @@
-{"80001":{"LiquidityVault":["0x010fC728F8d8a40d9b18fd0129f17a4E1F703A00"],"LiquidityWars":["0xF26AC22Da674c8Bc8B5E6276afF69823bcc35785"]}}
+{"80001":{"LiquidityVault":["0x8F3262f25286869B043C4a63A1b2664d521E2CCD"],"LiquidityWars":["0x98E1a512ca62206548Da36f2A5D53c6A04d3d716"], "LiquidityWarsConfig":["0x9f2DAf5153D794ac979aC5552432e8e14760Cd3F"],"SushiSwap":["0x9f2DAf5153D794ac979aC5552432e8e14760Cd3F"]}}
