--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@metamask/logo": "^3.1.1",
+    "@popperjs/core": "2.9.1",
     "@web3auth/web3auth": "^2.1.3",
     "ethers": "^5.7.2",
     "framer-motion": "^7.6.1",
