--- a/constants/networkMapping.json
+++ b/constants/networkMapping.json
@@ -1,1 +1,10 @@
-{"80001":{"LiquidityVault":["0xA7E49827505d35BE6285A3252E732C46391db5c1"],"LiquidityWars":["0x00396C72Db162B2bc83D073465b26A87B8e8e93A"], "LiquidityWarsConfig":["0x5afbF150D924C3C9d6b081A619Ed83Ae2c2b8d16"],"SushiSwap":["0x9f2DAf5153D794ac979aC5552432e8e14760Cd3F"],"SendMeDemoLps":["0xa17DC3018d1ae833b119754B4135cbb35F4F718B"]}}
+{
+	"80001": {
+		"LiquidityVault": ["0x2320B7a94F339D1cEf9EDd4A653d58f3bB666995"],
+		"LiquidityWars": ["0xF010790219A93Af678E29f63b73D8Fa7cCd4f464"],
+		"LiquidityWarsConfig": ["0xbC22d783cE2027613C513f5f07ABa9aeBA6568DD"],
+		"Strategies": ["0xd0c08ce389aea24ddFB170F86ed181D1239efA6d"],
+        "SushiSwap":["0x9f2DAf5153D794ac979aC5552432e8e14760Cd3F"],
+        "SendMeDemoLps":["0xa17DC3018d1ae833b119754B4135cbb35F4F718B"]
+	}
+}
