--- a/constants/networkMapping.json
+++ b/constants/networkMapping.json
@@ -1,10 +1,1 @@
-{
-  "80001": {
-    "LiquidityVault": ["0x19a77DB3FbE1550Eb001132b8604081001ECcdE9"],
-    "LiquidityWars": ["0xd4436e8F15555eE096661bE72821A16Da55C962d"],
-    "LiquidityWarsConfig": ["0x7766c8CbED17DE698756C6Df3393144c936c9259"],
-    "Strategies": ["0x8Fe0D2d93A04E498A02F319d5592fea0B04B1C0e"],
-    "SushiSwap": ["0x7522559e20725b715d62d274e68e703F331954d1"],
-    "SendMeDemoLps": ["0xa17DC3018d1ae833b119754B4135cbb35F4F718B"]
-  }
-}
+{"80001":{"LiquidityVault":["0xA7E49827505d35BE6285A3252E732C46391db5c1"],"LiquidityWars":["0x00396C72Db162B2bc83D073465b26A87B8e8e93A"], "LiquidityWarsConfig":["0x5afbF150D924C3C9d6b081A619Ed83Ae2c2b8d16"],"Strategies":["0x088e51C2A0590597e7C2334389B7580C4a649165"],"SushiSwap":["0x9f2DAf5153D794ac979aC5552432e8e14760Cd3F"],"SendMeDemoLps":["0xa17DC3018d1ae833b119754B4135cbb35F4F718B"]}}
