--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-moralis": "^1.4.2",
+    "use-sound": "^4.0.1",
     "web3uikit": "^1.0.4"
   },
   "devDependencies": {
