--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moralis": "^2.6.7",
     "moralis-v1": "^1.11.0",
     "next": "12.3.1",
+    "pluralize": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-moralis": "^1.4.2",
